fix nav buttons and scrollbars on firefox

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -65,6 +65,16 @@ button:has(> img).secondary {
   @apply bg-none border-2 border-white text-white shadow-none active:bg-faint;
 }
 
+/* Old timey CSS to support firefox */
+button.manager-button {
+  @apply text-sm flex flex-col justify-center items-center h-[6rem] w-[6rem];
+}
+
+/* Old timey CSS to support firefox */
+button.manager-button.secondary {
+  @apply bg-none border-2 border-white text-white shadow-none active:bg-faint;
+}
+
 button.secondary {
   @apply bg-none border-2 border-white text-white shadow-none active:bg-faint;
 }
@@ -117,6 +127,11 @@ dd {
 /* For Webkit-based browsers (Chrome, Safari and Opera) */
 *::-webkit-scrollbar {
   display: none;
+}
+
+/* Firefox */
+* {
+  scrollbar-width: none;
 }
 
 .fileInput {
